buildscript {
    ext {
        springBootVersion = '2.6.4' 
    }
    repositories {
       maven { url = 'https://repo1.maven.org/maven2/' }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}


apply plugin: 'java'
apply plugin: 'org.springframework.boot' 

repositories {
    maven {  
            url = uri('https://repo1.maven.org/maven2/')
        } 
}  

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}

def excludeInfinispan = project.hasProperty('excludeInfinispan') && project.excludeInfinispan == 'true'

tasks.named('processResources') {
    if (excludeInfinispan) {
        exclude 'infinispan.xml'
    }
}


dependencies {
    developmentOnly "org.springframework.boot:spring-boot-devtools:3.2.4"
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.4' 
    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.4'
    implementation 'org.springframework.session:spring-session-jdbc:3.2.2'
    implementation 'org.springframework.ldap:spring-ldap-core:3.2.2'
    implementation 'org.springframework.security:spring-security-ldap:6.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.4'
    implementation 'org.infinispan:infinispan-spring6-embedded:15.2.5.Final'
    implementation 'org.infinispan:infinispan-hibernate-cache-v62:15.2.5.Final'
    implementation 'javax.transaction:javax.transaction-api:1.3'    
    // Database  
    implementation 'org.hibernate.orm:hibernate-c3p0:6.4.4.Final'
	implementation 'org.postgresql:postgresql:42.7.3' 
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.17.0'

    // Type tools
	implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'commons-validator:commons-validator:1.8.0'
    implementation 'org.apache.commons:commons-text:1.11.0'
    implementation 'fr.marcwrobel:jbanking:4.2.0'
    
    // PDF, XML, Office & HTML generation
    implementation 'com.itextpdf:itextpdf:5.5.13.3'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4' 
    implementation 'ch.digitalfondue.mjml4j:mjml4j:1.0.3'
    implementation 'org.jsoup:jsoup:1.21.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.xhtmlrenderer:flying-saucer-core:9.7.1'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.7.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
    implementation 'org.jsoup:jsoup:1.18.1'

    // QR code generation
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'

    // Azure libs
    implementation 'com.azure:azure-ai-formrecognizer:4.1.6'
    implementation 'com.azure:azure-identity:1.11.4' 

}
 
group = 'com.jss.osiris'
version = '27-beta2' 
description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
sourceCompatibility = '17'
targetCompatibility = '17'
 
